GH-442: Prevented wrapping while adding new DefinitionList items.

--- a/src/common/components/definitionList.scss
+++ b/src/common/components/definitionList.scss
@@ -9,6 +9,8 @@
 
 	> div {
 		min-width: 64px;
+		white-space: nowrap;
+    	overflow: hidden;
 
 		> dt {
 			font-size: $font-size-small;
